[package]
edition = "2021"
name = "ttr"
version = "0.3.0"
authors = ["Denis Bazhenov <dotsid@gmail.com>"]

[dependencies]
anyhow = "1.0.69"
clap = {version = "4.1.6", features = ["derive"]}
crossterm = "0.26.0"
dirs = "4.0.0"
serde = {version = "1.0.152", features = ["derive"]}
serde_yaml = "0.9.17"
