[package]
edition = "2021"
name = "ttr"
version = "0.3.0"
authors = ["Denis Bazhenov <dotsid@gmail.com>"]

[dependencies]
anyhow = "1.0.100"
clap = {version = "4.5.53", features = ["derive"]}
crossterm = "0.29.0"
ctrlc = "3.5.1"
dirs = "6.0.0"
nix = {version="0.30.1", features = ["signal"]}
serde = {version = "1.0.228", features = ["derive"]}
serde_yaml = "0.9.34"
