[package]
edition = "2021"
name = "ttr"
version = "0.4.1"
authors = ["Denis Bazhenov <dotsid@gmail.com>"]
repository = "https://github.com/bazhenov/ttr"
homepage = "https://github.com/bazhenov/ttr"
description = "WhichKey-like Interactive terminal task runner"

[dependencies]
anyhow = "1.0.101"
clap = {version = "4.5.58", features = ["derive"]}
crossterm = "0.29.0"
ctrlc = "3.5.2"
dirs = "6.0.0"
nix = {version="0.31.1", features = ["signal"]}
serde = {version = "1.0.228", features = ["derive"]}
serde_yaml = "0.9.34"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
